--- a/index.html
+++ b/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- <meta name="robots" content="noindex, nofollow" /> -->
     <meta charset="UTF-8" />
+    <meta name="robots" content="index, follow" />
+    <title>MHV Education</title>
+    <meta
+      name="title"
+      content="MHV Education - Best Stock Market Courses in Dehradun"
+    />
+    <meta
+      name="description"
+      content="Join MHV Education – Dehradun's leading institute for stock market courses. Master trading, investing, and technical analysis with hands-on guidance from market experts."
+    />
+    <meta
+      name="keywords"
+      content="stock market courses, trading, investing, technical analysis, Dehradun, stock, market, course, mhv, mhv education, stock market, stock market course, stock market course in Dehradun, stock market course in India, stock market course in Uttarakhand, stock market course in Delhi, stock market course in Mumbai, stock market course in Bangalore, stock market course in Chennai, stock market course in Kolkata, stock market course in Hyderabad, stock market course in Pune"
+    />
+    <link rel="canonical" href="https://www.mhveducation.com/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="manifest" href="/site.webmanifest" />
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <title>MHV Education</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
