--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="robots" content="index, follow" />
-    <title>MHV Education</title>
     <meta
       name="title"
       content="MHV Education - Best Stock Market Courses in Dehradun"
@@ -17,6 +16,7 @@
       content="stock market courses, trading, investing, technical analysis, Dehradun, stock, market, course, mhv, mhv education, stock market, stock market course, stock market course in Dehradun, stock market course in India, stock market course in Uttarakhand, stock market course in Delhi, stock market course in Mumbai, stock market course in Bangalore, stock market course in Chennai, stock market course in Kolkata, stock market course in Hyderabad, stock market course in Pune"
     />
     <link rel="canonical" href="https://www.mhveducation.com/" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="manifest" href="/site.webmanifest" />
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
@@ -33,3 +33,4 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+<!-- Akshat-Negi & Advik Bhatt -->
