--- a/index.html
+++ b/index.html
@@ -13,6 +13,64 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=AW-16701021702"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "AW-16701021702");
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "@id": "https://mhveducation.com/#localbusiness",
+        "name": "MHV Education",
+        "image": "https://mhveducation.com/assets/img/brandlogo.webp",
+        "url": "https://mhveducation.com/",
+        "telephone": "9634104622",
+        "priceRange": "₹30,000+",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Iksana Workspaces, Anand Arcade, Kishanpur",
+          "addressLocality": "Dehradun",
+          "postalCode": "248001",
+          "addressCountry": "IN"
+        },
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": 30.372706,
+          "longitude": 78.0844817
+        },
+        "sameAs": ["https://www.instagram.com/mhveducation/"]
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://mhveducation.com/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "Courses",
+            "item": "https://mhveducation.com/courses"
+          }
+        ]
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
